Orange Button Correctly Named
Highlight of object colour has changed

--- a/index.html
+++ b/index.html
@@ -293,55 +293,55 @@
 
         <!-- OBJ MODELS -->
         <a-entity id="target">
-            <a-obj-model change_blue src="#obj-1" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model change_blue src="#obj-1" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-2" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-2" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-3" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-3" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-4" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-4" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-5" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-5" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-6" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-6" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-7" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-7" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-8" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-8" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-9" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-9" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-10" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-10" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-11" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-11" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-12" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-12" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-13" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-13" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-14" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-14" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-15" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-15" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-16" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-16" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-17" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-17" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-18" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-18" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-19" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-19" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-20" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-20" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-21" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-21" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-22" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-22" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-23" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-23" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-24" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-24" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
-            <a-obj-model src="#obj-25" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #FFF00F">
+            <a-obj-model src="#obj-25" position="5 0 -15" scale="0.001 0.001 0.001" rotation="-90 0 -360" color="#424B54" object-info-on-click="color: #7FEFBD">
             </a-obj-model>
             <!-- //color: OuterSpace -->
         </a-entity>
@@ -390,7 +390,7 @@
     
     <br>
     
-    <div id="orange_btn">GREEN</div>
+    <div id="orange_btn">ORANGE</div>
             <div id="green_bg"></div>
 
     <div class="meta">
